--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+assignment1/cs231n/datasets/
+assignment2/cs231n/datasets/
+assignment3/cs231n/datasets/
